kubernetes/apps/flux-system/flux-operator/app/httproute.yaml
#FIXME remove after flux-operator helm chart httproute is released
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-web
  namespace: flux-system
spec:
  parentRefs:
    - name: external
      namespace: envoy-gateway-system
      sectionName: https-subdomains
  hostnames:
    - 'flux.${SECRET_DOMAIN}'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: flux-operator
          namespace: flux-system
          port: 9080
